Buttons and icons

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/onion-nebula.min.css" />
     <link rel="stylesheet" type="text/css" href="css/demo.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/includes/icomoon.min.css" />
 </head>
 
 <body>
@@ -44,7 +45,7 @@
             <h5>Version 0.1</h5>
             <ul class="btns">
                 <li>
-                    <a href="./css/onion-nebula.min.css" download class="btn white">Download MINIFY</a>
+                    <a href="./css/onion-nebula.scss" class="btn white" download>Download SCSS</a>
                 </li>
                 <li>
                     <a href="http://github.com/farolcc/onion-nebula" class="btn white" target="_blank">GitHub</a>
